# WutEngine

./: .git-blame-ignore-revs  .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  WutEngine-Editor.code-workspace  architecture.drawio  build.rs  clippy.toml  dist-workspace.toml  renderpipeline.drawio  rustfmt.toml
Editor/: Cargo.toml
Editor/we_fonts/: README.md
Editor/we_fonts/src/: lib.rs
Editor/we_menu/src/: lib.rs
Editor/we_prefs/src/: lib.rs
Editor/we_style/: Cargo.toml
Editor/we_style/src/: lib.rs
Editor/wutengine_editor/: Cargo.toml  build.rs
Editor/wutengine_editor/src/: asset_gui.rs  editor_preferences.rs  editorwindow_renderpass.rs  exit.rs  logger.rs  main.rs  select_project.rs
asset/wutengine_asset_importers/: Cargo.toml  README.md
asset/wutengine_asset_importers/src/: generic.rs  image.rs  lib.rs
asset/wutengine_asset_server/: Cargo.toml  README.md
asset/wutengine_asset_server/src/: asset_loader.rs  asset_server.rs  autoload.rs  lib.rs
gl-from-raw-window-handle/: Cargo.toml  README.md
gl-from-raw-window-handle/src/: lib.rs  macos.rs  win.rs  x11.rs
material_testing/: .gitignore  Cargo.toml
material_testing/material_shadercomp/: Cargo.toml
material_testing/material_shadercomp/src/: parser.rs
material_testing/material_testing/: Cargo.toml
material_testing/material_testing/src/: bind_group.rs  instance.wgsl  unlit.wgsl
material_testing/src/: bind_group.rs  camera.wgsl  instance.wgsl  main.rs  material.rs  unlit.json  unlit.wgsl
material_testing/src/types/: mod.rs  primitives.rs
wutengine/: Cargo.toml
wutengine/macro/: Cargo.toml
wutengine/macro/src/: lib.rs
wutengine/shaders/unlit/: fragment.glsl  fragment.wgsl  vertex.glsl  vertex.wgsl
wutengine/src/: asset.rs  builtins.rs  color.rs  component.rs  componentset.rs  config.rs  development_overlay.rs  entity.rs  fastmap.rs  gameobject.rs  graphics.rs  lib.rs  math.rs  plugin.rs  prelude.rs  profiling.rs  runtime.rs  system.rs  thread.rs  threading.rs  time.rs  util.rs  window.rs  windowing.rs  winit_app.rs  world.rs
wutengine/src/asset/: mod.rs
wutengine/src/builtin/: mod.rs
wutengine/src/builtins/: assets.rs  camera.rs  mesh.rs  mod.rs  name.rs  shaders.rs
wutengine/src/command/: entity.rs  event.rs  mod.rs  window.rs
wutengine/src/component/: data.rs  mod.rs  renderer.rs  state.rs
wutengine/src/components/: camera.rs  mesh.rs  mod.rs  name.rs
wutengine/src/config/: mod.rs
wutengine/src/context/: engine.rs  gameobject.rs  graphics.rs  message.rs  mod.rs  plugin.rs  viewport.rs  window.rs
wutengine/src/development_overlay/: egui_utils.rs  mod.rs  rendering_test.rs  widget_gallery.rs
wutengine/src/display/: mod.rs
wutengine/src/ecs/: mod.rs
wutengine/src/entity/: builder.rs  mod.rs
wutengine/src/event/: mod.rs
wutengine/src/gameobject/: manager.rs  mod.rs  runtimestorage.rs  state.rs
wutengine/src/global/: mod.rs
wutengine/src/graphics/: api.rs  bind_group.rs  cache.rs  config.rs  dev_overlays.rs  init.rs  internal_bind_groups.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  renderpass.rs  sampler.rs  shader.rs  shaders.rs  texture.rs
wutengine/src/id/: instance.rs  mod.rs
wutengine/src/input/: gamepad.rs  keyboard.rs  mod.rs  mouse.rs
wutengine/src/jobs/: mod.rs
wutengine/src/legacy_storage/: array.rs  mod.rs  ptr_helpers.rs
wutengine/src/loading/: scene.rs  script.rs
wutengine/src/log/: mod.rs
wutengine/src/macros/: mod.rs
wutengine/src/math/: mod.rs  random.rs
wutengine/src/object/: mod.rs
wutengine/src/physics/: mod.rs  physics2d.rs  physics3d.rs
wutengine/src/plugins/: mod.rs
wutengine/src/ui/: mod.rs
wutengine_asset/: Cargo.toml
wutengine_asset/src/: lib.rs
wutengine_config/: Cargo.toml
wutengine_config/src/: lib.rs
wutengine_core/: Cargo.toml  README.md
wutengine_core/src/: assert.rs  color.rs  component.rs  entity.rs  event.rs  fastmap.rs  identifiers.rs  lib.rs  lookuptable.rs  profiling.rs  renderer.rs  system.rs  windowing.rs
wutengine_ecs/: Cargo.toml  README.md
wutengine_ecs/src/: entity_id.rs  lib.rs  test.rs
wutengine_editor/: Cargo.toml  README.md
wutengine_editor/src/: main.rs
wutengine_egui/: Cargo.toml
wutengine_egui/src/: egui.json  egui.wgsl  lib.rs  render.rs  serde_ui.rs  utils.rs
wutengine_graphics/: Cargo.toml  README.md
wutengine_graphics/src/: backend.rs  bind_group.rs  color.rs  config.rs  format.rs  init.rs  internal_bind_groups.rs  lib.rs  material.rs  mesh.rs  pipeline.rs  queries.rs  renderer.rs  resource.rs  sampler.rs  texture.rs  windowing.rs
wutengine_job/: Cargo.toml
wutengine_job/src/: lib.rs
wutengine_loader_obj/: Cargo.toml
wutengine_loader_obj/src/: lib.rs
wutengine_lua/: Cargo.toml
wutengine_lua/src/: lib.rs  overrides.rs
wutengine_math/: Cargo.toml
wutengine_math/src/: lib.rs
wutengine_opengl/: Cargo.toml  README.md  build.rs
wutengine_opengl/src/: buffer.rs  constantbuffers.rs  debug.rs  error.rs  extensions.rs  lib.rs  opengl.rs  shader.rs  shaderattribute.rs  shaderprogram.rs  utils.rs  vao.rs  vbo.rs  window.rs
wutengine_physics/: Cargo.toml  README.md
wutengine_physics/src/: collider.rs  lib.rs  rigidbody.rs
wutengine_physics3d/: Cargo.toml  README.md  build.rs
wutengine_puffin_egui/: Cargo.toml  README.md
wutengine_puffin_egui/src/: filter.rs  flamegraph.rs  lib.rs
wutengine_runtime/: Cargo.toml  README.md
wutengine_runtime/src/: headless_renderer.rs  lib.rs  settings.rs
wutengine_serialized/: Cargo.toml  README.md
wutengine_serialized/src/: lib.rs  ordered_vec.rs
wutengine_shadercompiler/: Cargo.toml  README.md
wutengine_shadercompiler/src/: ir.rs  lib.rs  parser.rs
wutengine_time/: Cargo.toml
wutengine_time/src/: atomic.rs  lib.rs
wutengine_util/: Cargo.toml
wutengine_util/macro/: Cargo.toml  README.md
wutengine_util/src/: current_function.rs  init_once.rs  lib.rs  main_thread.rs  shard_hasher.rs  small_macros.rs
wutengine_util_macro/: Cargo.toml  README.md
wutengine_util_macro/src/: lib.rs
wutengine_windowing/: Cargo.toml
wutengine_windowing/src/: display.rs  lib.rs  window.rs
(+587 files in other folders)
