[workspace]
resolver = "3"
members = ["material_shadercomp", "material_testing"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
material_shadercomp = { path = "material_shadercomp" }
naga = "28.0.0"
serde = { version = "1.0.228", features = ["derive"] }
wgpu = "28.0.0"
winit = "0.30.12"
serde_json = "1"
derive_more = "2"
pollster = "*"
glam = { version = "*", features = ["bytemuck"] }
bytemuck = { version = "*" }
flexbuffers = { version = "25" }
tobj = "4.0.3"

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
