[workspace]
resolver = "3"
members = [
    "wutengine",
    "wutengine_asset",
    "wutengine_shadercompiler",
    "wutengine_util_macro",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.95"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
homepage = "https://github.com/cloone8/WutEngine"
repository = "https://github.com/cloone8/WutEngine"
license = "MPL-2.0"
keywords = ["2D", "3D", "game", "engine"]
categories = ["game-engines"]

[workspace.dependencies]
### Workspace dependencies ###
wutengine = { path = "wutengine", version = "0.6.0" }
wutengine_asset = { path = "wutengine_asset", version = "0.6.0" }
wutengine_shadercompiler = { path = "wutengine_shadercompiler", version = "0.6.0" }
wutengine_util_macro = { path = "wutengine_util_macro", version = "0.6.0" }

### External dependencies ###
winit = { version = "0.30" }
wgpu = { version = "29.0", default-features = false, features = [
    "fragile-send-sync-non-atomic-wasm",
] }
naga = { version = "29.0", default-features = false }
hecs = { version = "0.11" }
gilrs = { version = "0.11" }

rayon = { version = "1.11" }
pollster = { version = "0.4" }
spin_sleep = { version = "1.3" }
smallvec = { version = "1.15", features = [
    "union",
    "const_generics",
    "const_new",
] }
arc-swap = { version = "1.9" }

profiling = { version = "1.0" }
puffin_http = { version = "0.17" }
log = { version = "0.4" }
glam = { version = "0.32", features = ["std", "debug-glam-assert"] }
bytemuck = { version = "1.25" }

derive_more = { version = "2.1" }
nohash-hasher = { version = "0.2" }
twox-hash = { version = "2.1" }
dashmap = { version = "6.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_bytes = { version = "0.11" }
toml = { version = "1.1" }

quote = { version = "1.0" }
syn = { version = "2.0", features = ["full"] }

image = { version = "0.25.9" }

rapier2d = { version = "0.32" }
rapier3d = { version = "0.32" }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
# Groups
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

# Individual lints
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
missing_assert_messages = "warn"
missing_docs_in_private_items = "warn"
missing_assert_message = "warn"
allow_attributes_without_reason = "warn"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
too_many_lines = "warn"
unused_self = "warn"
mutex_integer = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
borrow_as_ptr = "warn"
doc_broken_link = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
infinite_loop = "warn"
verbose_file_reads = "warn"
unneeded_field_pattern = "warn"
unimplemented = "warn"
todo = "warn"
suspicious_operation_groupings = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
self_named_module_files = "deny"
missing_fields_in_debug = "warn"
