[workspace]
resolver = "3"
members = [
    "runtime/wutengine",
    "runtime/wutengine_audio",
    "runtime/wutengine_config",
    "runtime/wutengine_development_overlay",
    "runtime/wutengine_egui",
    "runtime/wutengine_event",
    "runtime/wutengine_graphics",
    "runtime/wutengine_input",
    "runtime/wutengine_logger",
    "runtime/wutengine_math",
    "runtime/wutengine_physics",
    "runtime/wutengine_puffin_egui",
    "runtime/wutengine_shadercompiler",
    "runtime/wutengine_task",
    "runtime/wutengine_time",
    "runtime/wutengine_util",
    "runtime/wutengine_util_macro",
    "asset/wutengine_assets",
    "asset/wutengine_asset_importers",
    "editor/wutengine_editor",
    "editor/we_fonts",
    "editor/we_menu",
    "editor/we_prefs",
    "editor/we_style",
    "asset/wutengine_asset_server",
    "tools/weimport",
    "tools/weassetconv",
]

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.95"
authors = ["Wouter de Bruijn <wouter@wutru.io>"]
homepage = "https://github.com/cloone8/WutEngine"
repository = "https://github.com/cloone8/WutEngine"
license = "MPL-2.0"
readme = "README.md"
keywords = ["2D", "3D", "game", "engine"]
categories = ["game-engines"]
publish = false

[workspace.dependencies]
### Workspace dependencies ###
## Runtime ##
wutengine = { path = "runtime/wutengine", version = "0.6.0" }
wutengine_audio = { path = "runtime/wutengine_audio", version = "0.6.0" }
wutengine_config = { path = "runtime/wutengine_config", version = "0.6.0" }
wutengine_development_overlay = { path = "runtime/wutengine_development_overlay", version = "0.6.0" }
wutengine_egui = { path = "runtime/wutengine_egui", version = "0.6.0" }
wutengine_event = { path = "runtime/wutengine_event", version = "0.6.0" }
wutengine_graphics = { path = "runtime/wutengine_graphics", version = "0.6.0" }
wutengine_input = { path = "runtime/wutengine_input", version = "0.6.0" }
wutengine_logger = { path = "runtime/wutengine_logger", version = "0.6.0" }
wutengine_math = { path = "runtime/wutengine_math", version = "0.6.0" }
wutengine_physics = { path = "runtime/wutengine_physics", version = "0.6.0" }
wutengine_puffin_egui = { path = "runtime/wutengine_puffin_egui", version = "0.6.0" }
wutengine_shadercompiler = { path = "runtime/wutengine_shadercompiler", version = "0.6.0" }
wutengine_task = { path = "runtime/wutengine_task", version = "0.6.0" }
wutengine_time = { path = "runtime/wutengine_time", version = "0.6.0" }
wutengine_util = { path = "runtime/wutengine_util", version = "0.6.0" }
wutengine_util_macro = { path = "runtime/wutengine_util_macro", version = "0.6.0" }

## Asset ##
wutengine_assets = { path = "asset/wutengine_assets", version = "0.6.0" }
wutengine_asset_server = { path = "asset/wutengine_asset_server", version = "0.6.0" }
wutengine_asset_importers = { path = "asset/wutengine_asset_importers", version = "0.6.0" }

## Editor ##
we_fonts = { path = "editor/we_fonts" }
we_menu = { path = "editor/we_menu" }
we_prefs = { path = "editor/we_prefs" }
we_style = { path = "editor/we_style" }

### External dependencies ###
bytemuck = { version = "1.25", default-features = false }
cursor-icon = { version = "1", default-features = false }
clap = { version = "4" } # Leave default features on, because we don't use it outside std environments anyway
dashmap = { version = "6.1", default-features = false }
derive_more = { version = "2.1", default-features = false }
dirs = { version = "6", default-features = false }
egui = { version = "0.35", default-features = false }
egui_extras = { version = "0.35", default-features = false }
futures = { version = "0.3", default-features = false }
gilrs = { version = "0.11", default-features = false }
glam = { version = "0.33", default-features = false }
hecs = { version = "0.11", default-features = false }
image = { version = "0.25", default-features = false }
indexmap = { version = "2" }
jiff = { version = "0.2", default-features = false }
libc = { version = "0.2" }
log = { version = "0.4" }
naga = { version = "30", default-features = false }
nohash-hasher = { version = "0.2" }
pollster = { version = "1", default-features = false }
postcard = { version = "1", default-features = false }
profiling = { version = "1.0" }
puffin = { version = "0.20" }
quote = { version = "1.0" }
rapier2d = { version = "0.34", default-features = false }
rapier3d = { version = "0.34", default-features = false }
rayon = { version = "1.11" }
rfd = { version = "0.17" }
rodio = { version = "0.22", default-features = false }
serde = { version = "1.0" }
serde_core = { version = "1.0" }
serde_bytes = { version = "0.11" }
serde_json = { version = "1.0" }
simplelog = { version = "0.12" }
smallvec = { version = "1.15", features = [
    "union",
    "const_generics",
    "const_new",
] }
spin_sleep = { version = "1.3" }
syn = { version = "2.0" }
toml = { version = "1.1" }
twox-hash = { version = "2.1", default-features = false }
uuid = { version = "1", default-features = false }
wgpu = { version = "30", default-features = false, features = [
    "fragile-send-sync-non-atomic-wasm",
] }
windows = { version = "0.62" }
windows-strings = { version = "0.5" }
winit = { version = "0.30" }
winresource = { version = "0.1" }

[profile.dev]
strip = "none"
lto = "off"
opt-level = 1
debug = "full"
debug-assertions = true

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[workspace.lints.rust]
# Groups
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }

# Individual lints
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"
unreachable_pub = "warn"
unused_crate_dependencies = "warn"
missing_debug_implementations = "warn"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_assert_messages = "warn"
missing_docs_in_private_items = "warn"
missing_assert_message = "warn"
allow_attributes_without_reason = "warn"
too_many_lines = "warn"
unused_self = "warn"
mutex_integer = "warn"
large_stack_arrays = "warn"
large_types_passed_by_value = "warn"
borrow_as_ptr = "warn"
doc_broken_link = "warn"
empty_drop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
infinite_loop = "warn"
verbose_file_reads = "warn"
unneeded_field_pattern = "warn"
todo = "warn"
suspicious_operation_groupings = "warn"
needless_collect = "warn"
needless_pass_by_ref_mut = "warn"
needless_raw_strings = "warn"
self_named_module_files = "deny"
missing_fields_in_debug = "warn"

similar_names = { level = "allow" }            # Too noisy and not that useful
missing_panics_doc = { level = "allow" }       # I won't include a panic doc for every function that locks a mutex or rwlock
missing_errors_doc = { level = "allow" }       # Error types should be limited in size and have docs themselves
must_use_candidate = { level = "allow" }       # Not actually a problem
manual_assert = { level = "allow" }            # Usually for a good reason when done
cast_ptr_alignment = { level = "allow" }       # Common to cast u8 to other types
struct_field_names = { level = "allow" }       # Too many false positives
match_same_arms = { level = "allow" }          # Too ugly most of the time
struct_excessive_bools = { level = "allow" }   # Mostly unnecessary
cast_possible_truncation = { level = "allow" } # Too noisy
cast_precision_loss = { level = "allow" }      # Too noisy
cast_sign_loss = { level = "allow" }           # Too noisy
