[package]
name = "material_testing"
version.workspace = true
edition.workspace = true

[dependencies]
derive_more = { workspace = true, features = [
    "from",
    "display",
    "error",
    "is_variant",
    "unwrap",
    "try_unwrap",
] }
material_shadercomp.workspace = true
naga.workspace = true
serde.workspace = true
winit.workspace = true
wgpu.workspace = true
serde_json.workspace = true
pollster.workspace = true
glam.workspace = true
bytemuck = { workspace = true, features = ["const_zeroed"] }
flexbuffers.workspace = true
