[package]
name = "wutengine"
description = "A modern game engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[features]
## Enable profiling support
profiling = ["dep:wutengine_puffin_egui", "profiling/profile-with-puffin"]

## Enable the development overlay
development_overlay = ["dep:wutengine_development_overlay"]

## Add default asset importers
asset_importers = ["wutengine_asset/importers"]

[lints]
workspace = true

[dependencies]
wutengine_graphics.workspace = true
wutengine_util.workspace = true
wutengine_util_macro.workspace = true
wutengine_shadercompiler.workspace = true
wutengine_asset.workspace = true
wutengine_input.workspace = true
wutengine_math.workspace = true
wutengine_time.workspace = true
wutengine_config.workspace = true
wutengine_physics2d.workspace = true
wutengine_physics3d.workspace = true
wutengine_audio.workspace = true
wutengine_logger.workspace = true
wutengine_event.workspace = true
wutengine_thread.workspace = true

log.workspace = true
simplelog.workspace = true
derive_more = { workspace = true, features = [
    "display",
    "error",
    "from",
    "debug",
    "is_variant",
    "unwrap",
    "try_unwrap",
] }
document-features.workspace = true
hecs.workspace = true
winit.workspace = true
nohash-hasher.workspace = true
image.workspace = true
profiling.workspace = true
smallvec.workspace = true
rayon.workspace = true
serde_json.workspace = true
spin_sleep = { workspace = true }
uuid = { workspace = true }

# Optional dependencies
wutengine_development_overlay = { workspace = true, optional = true } # Feature - development_overlay
wutengine_puffin_egui = { workspace = true, optional = true }         # Feature - profiling
