[package]
name = "wutengine_asset"
description = "Asset loading and management for WutEngine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[features]
format_text = ["dep:serde_json"]

[lints]
workspace = true

[dependencies]
wutengine_util.workspace = true
log.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
image.workspace = true
serde.workspace = true
serde_bytes.workspace = true
postcard.workspace = true
serde_json = { workspace = true, optional = true }
bytemuck.workspace = true

[dev-dependencies]
serde_json.workspace = true
