[package]
name = "wutengine_config"
description = "WutEngine configuration management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wutengine_util.workspace = true
serde.workspace = true
toml.workspace = true
log.workspace = true

[lints]
workspace = true
