[package]
name = "wutengine_config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wutengine_util.workspace = true

log.workspace = true
profiling.workspace = true
dashmap.workspace = true
serde.workspace = true
smallvec.workspace = true
toml.workspace = true
derive_more = { workspace = true, features = ["display", "error", "from"] }

[lints]
workspace = true
