[package]
name = "wutengine_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glam.workspace = true
serde.workspace = true
nohash-hasher.workspace = true
