[package]
name = "wutengine_core"
description = "Core datatypes and traits for WutEngine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
rand.workspace = true
static_assertions.workspace = true
nohash-hasher.workspace = true
raw-window-handle.workspace = true
glam.workspace = true
log.workspace = true
