[package]
name = "wutengine_ecs"
description = "The core implementation of the WutEngine ECS"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../README.md"

[lints]
workspace = true

[dependencies]
wutengine_core.workspace = true
wutengine_util_macro.workspace = true

rand.workspace = true
thiserror.workspace = true
itertools.workspace = true
log.workspace = true
