[package]
name = "wutengine_editor"
description = "An easy-to-use editor for WutEngine games"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lints]
workspace = true

[dependencies]
wutengine.workspace = true
