[package]
name = "wutengine_egui"
description = "egui intergration for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wutengine_math.workspace = true
wutengine_asset.workspace = true
bytemuck.workspace = true
egui = { workspace = true, features = ["rayon", "bytemuck"] }

[lints]
workspace = true
