[package]
name = "wutengine_graphics"
description = "Graphics stack for WutEngine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lints]
workspace = true

[features]
dx12 = ["wgpu/dx12"]
metal = ["wgpu/metal"]
vulkan = ["wgpu/vulkan"]
opengl = ["wgpu/gles"]

[dependencies]
wutengine_util.workspace = true
wutengine_windowing.workspace = true
wutengine_asset.workspace = true
wutengine_shadercompiler.workspace = true
glam.workspace = true
image.workspace = true
serde.workspace = true
wgpu.workspace = true
naga = { workspace = true, features = ["serialize", "deserialize"] }
log.workspace = true
profiling.workspace = true
thiserror.workspace = true
cfg-if.workspace = true
bytemuck.workspace = true

[dev-dependencies]
serde_json.workspace = true
