[package]
name = "wutengine_job"
description = "Job system for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log.workspace = true
profiling.workspace = true
rayon.workspace = true

[lints]
workspace = true
