[package]
name = "wutengine_loader_obj"
description = "OBJ 3D file loader for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror.workspace = true
log.workspace = true

[lints]
workspace = true
