[package]
name = "wutengine_lua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wutengine_util.workspace = true
wutengine_math.workspace = true

log.workspace = true
mlua = { workspace = true, features = [
    "luajit",
    "vendored",
    "mlua_derive",
    "send",
] }

[lints]
workspace = true
