[package]
name = "wutengine_math"
description = "Math functions and types for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
glam.workspace = true

[lints]
workspace = true
