[package]
name = "wutengine_opengl"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wutengine_core.workspace = true
gl-from-raw-window-handle.workspace = true
glam.workspace = true
log.workspace = true

[build-dependencies]
gl_generator.workspace = true
