[package]
name = "wutengine_opengl"
description = "The OpenGL backend for WutEngine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lints]
workspace = true

[build-dependencies]
gl_generator.workspace = true

[dependencies]
wutengine_graphics.workspace = true
wutengine_core.workspace = true
gl-from-raw-window-handle.workspace = true
log.workspace = true
thiserror.workspace = true
nohash-hasher.workspace = true
glam.workspace = true
