[package]
name = "wutengine_physics3d"
description = "3D Physics for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "../wutengine_physics/src/lib.rs"

[dependencies]
wutengine_util.workspace = true
wutengine_math.workspace = true

log.workspace = true
profiling.workspace = true

rapier3d = { workspace = true, features = ["parallel", "simd-stable"] }

[lints]
workspace = true
