[package]
name = "wutengine_puffin_egui"
description = "A fork of puffin_egui for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = [
    "Emil Ernerfeldt <emil.ernerfeldt@gmail.com>",
    "Wouter de Bruijn <wouter@wutru.io>",
]
categories = ["development-tools::profiling", "game-development", "gui"]
homepage.workspace = true
repository.workspace = true
license = "MIT OR Apache-2.0"
keywords.workspace = true

[dependencies]
egui.workspace = true
egui_extras = { workspace = true, features = ["serde"] }
indexmap.workspace = true
log.workspace = true
puffin = { workspace = true, features = ["packing"] }
serde = { workspace = true, optional = true }
jiff.workspace = true

[lints]
workspace = true
