[package]
name = "wutengine_runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["serialization_json", "opengl"]

# Supported rendering backends
opengl = []

# Supported serialization formats for loading scenes from disk
serialization_json = ["dep:serde_json"]

[dependencies]
wutengine_core.workspace = true
glam.workspace = true
winit.workspace = true
log.workspace = true
thiserror.workspace = true
static_assertions.workspace = true
nohash-hasher.workspace = true
rand.workspace = true
serde.workspace = true
serde_json = { workspace = true, optional = true }
