[package]
name = "wutengine_serialized"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wutengine_core.workspace = true
relative-path.workspace = true
mint.workspace = true
serde.workspace = true
uuid.workspace = true
