[package]
name = "wutengine_shadercompiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log.workspace = true
simplelog.workspace = true
rayon.workspace = true
thiserror.workspace = true
wutengine_util.workspace = true
logos.workspace = true

[lints]
workspace = true
