[package]
name = "wutengine_shadercompiler"
description = "Shader compiler library for WutEngine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
serde = ["dep:serde"]

[dependencies]
log.workspace = true
simplelog.workspace = true
rayon.workspace = true
thiserror.workspace = true
wutengine_util.workspace = true
logos.workspace = true
itertools.workspace = true
naga = { workspace = true, features = ["wgsl-in"] }
serde = { workspace = true, optional = true }
profiling.workspace = true

[lints]
workspace = true
