[package]
name = "wutengine_time"
description = "WutEngine time manager and management"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
wutengine_util.workspace = true
log.workspace = true
profiling.workspace = true

[lints]
workspace = true
