[package]
name = "wutengine_util"
description = "Internal utilities for WutEngine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lints]
workspace = true

[dependencies]
nohash-hasher.workspace = true
log.workspace = true
wutengine_util_macro.workspace = true
