[package]
name = "wutengine_util"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log.workspace = true
nohash-hasher.workspace = true

[lints]
workspace = true
