[package]
name = "wutengine_util_macro"
description = "Internal utility proc macros for WutEngine. Do not use directly"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true

[lints]
workspace = true
