[package]
name = "wutengine_windowing"
description = "Window and display management for WutEngine"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
readme = "../README.md"

[lints]
workspace = true

[dependencies]
wutengine_util.workspace = true
winit.workspace = true
log.workspace = true
profiling.workspace = true
thiserror.workspace = true
